basic bootstrap setup

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     min-width: 100%;
 
 }
-
+/* 
 table, th, td{
     border:.5px solid black;
 }
@@ -27,7 +27,7 @@ th{
 
 td{
     width: 40px;
-}
+} */
 
 
 .leftside{
