--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 #libraryImage{
     max-height: 100px;
-    max-width: 1000px;
+    max-width: 100px;
     position: relative
 }
 
@@ -22,30 +22,60 @@
     min-width: 100%;
 
 }
-/* 
-table, th, td{
-    border:.5px solid black;
+
+.top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    gap: 20px;
+    padding-bottom: 20px;
 }
 
-table{
-    width: 500px;
+#readCheck{
+    cursor: pointer;
 }
-th{
-    height: 40px;
-}
-
-td{
-    width: 40px;
-} */
-
-
-/* .leftside{
-    border-right-style: solid;
-    border-color: black;
-    width: 300px;
-    padding-right: 25px;
-} */
 
 .libraryContents{
     padding-left: 20px;
 }
+
+.pop1 {
+
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    font-size: 13px;
+    }
+  
+form {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 20%; /* Could be more or less, depending on screen size */
+}
+
+  /* The Close Button */
+  /* #closex {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    padding-bottom: 24px;
+  }
+    
+  #closex:hover,
+  #closex:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  } */
+
